--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "description": "Backend for TAJ-F",
   "type": "module",
-  "main": "dist/server.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "node server.js",
-    "dev": "nodemon --ext ts --exec ts-node src/server.ts"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -21,8 +18,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.3",
-    "ts-node": "^10.9.2"
+  "engines": {
+    "node": "20.x"
   }
 }
